packages/jsts/tests/dbd/benchmark/TypeError/T09 Setting getter-only property x/T09-01/reproducer.js
document.getElementById('in_startDate').value = 'YYYY-MM-DD'; // Noncompliant: TypeError: Cannot set property value of #<HTMLInputElement> which has only a getter
